--- a/client/main.html
+++ b/client/main.html
@@ -4,22 +4,24 @@
 
 <body>
   <h1>Welcome to Meteor!</h1>
+  <div>{{> loginButtons}}</div>
 
-  {{> hello}}
-  {{> info}}
+  <h1>Messages</h1>
+  {{> Messages}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="Messages">
+  <ul class="list-group">
+    {{#each message in messages}}
+      {{> Message message=message}}
+    {{/each}}
+  </ul>
 </template>
 
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+<template name="Message">
+  <li class="list-group-item">
+       <span class="message-subject">{{message.subject}}</span>
+       <span class="message-body">{{message.body}}</span>
+       <span class="message-createdAt">{{message.createdAt}}</span>
+  </li>
 </template>
