ログイン処理を修正

--- a/client/chat.html
+++ b/client/chat.html
@@ -21,6 +21,9 @@
   <tr>
     <td>{{name}}</td>
     <td>{{createdAt}}</td>
-    <td><input type='button' class='btnDelete btn btn-danger' value='DELETE' data-id='{{_id}}' data-serial-code='{{serialCode}}'/></td>
+    <td>
+      <input type='button' class='btnDelete btn btn-danger' value='DELETE' data-id='{{_id}}' data-serial-code='{{serialCode}}'/>
+      <input type='button' class='btnDetail btn btn-info' value='DETAIL' data-id='{{_id}}' />
+    </td>
   </tr>
 </template>
