--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
 </body>
 
 <template name="loginTemplate">
-  {{#if isLogin}}{{> loginButtons}}{{else}}{{> topTemplate}}{{/if}}
+  {{#if isLogin }}{{> loginButtons}}{{else}}{{> topTemplate}}{{/if}}
 </template>
 
 <template name="topTemplate">
@@ -22,6 +22,9 @@
 <template name="menuTemplate">
     <div class="col-md-2">
       <h2>Menu</h2>
+      <ul class="menu_logout_container">
+        <li>{{> loginButtons}}</li>
+      </ul>
       <ul>
         <li class='clickMenu' data-menu="serviceInfo">サービス情報</li>
         <li class='clickMenu' data-menu="device">デバイス</li>
