--- a/client/main.html
+++ b/client/main.html
@@ -30,6 +30,7 @@
         <li class='clickMenu' data-menu="device">デバイス</li>
         <li class='clickMenu' data-menu="owner">オーナー</li>
         <li class='clickMenu' data-menu="chat">チャット</li>
+        <li class='clickMenu' data-menu="sendAll">一斉送信</li>
       </ul>
     </div>
 </template>
@@ -40,5 +41,6 @@
     {{#if isMenu "device"}}{{> deviceTemplate}}{{/if}}
     {{#if isMenu "owner"}}{{> ownerTemplate}}{{/if}}
     {{#if isMenu "chat"}}{{> chatTemplate}}{{/if}}
+    {{#if isMenu "sendAll"}}{{> sendAllTemplate}}{{/if}}
   </div>
 </template>
