--- a/client/main.html
+++ b/client/main.html
@@ -31,6 +31,7 @@
         <li class='clickMenu' data-menu="owner">オーナー</li>
         <li class='clickMenu' data-menu="chat">チャット</li>
         <li class='clickMenu' data-menu="sendAll">一斉送信</li>
+        <li class='clickMenu' data-menu="intonation">抑揚認識発話</li>
       </ul>
     </div>
 </template>
@@ -42,5 +43,6 @@
     {{#if isMenu "owner"}}{{> ownerTemplate}}{{/if}}
     {{#if isMenu "chat"}}{{> chatTemplate}}{{/if}}
     {{#if isMenu "sendAll"}}{{> sendAllTemplate}}{{/if}}
+    {{#if isMenu "intonation"}}{{> intonationTemplate}}{{/if}}
   </div>
 </template>
