--- a/client/broadcast_message.html
+++ b/client/broadcast_message.html
@@ -1,5 +1,5 @@
 <!-- 一斉送信 -->
-<template name="sendAllTemplate">
+<template name="broadcastMessageTemplate">
   <h1>一斉送信</h1>
   <form>
     <div class="form-group">
