--- a/client/main.html
+++ b/client/main.html
@@ -31,6 +31,7 @@
         <li class='clickMenu' data-menu="chat">チャット</li>
         <li class='clickMenu' data-menu="broadcastMessage">一斉送信</li>
         <li class='clickMenu' data-menu="intonation">抑揚認識発話</li>
+        <li class='clickMenu' data-menu="bgm">BGM</li>
       </ul>
     </div>
 </template>
@@ -42,7 +43,8 @@
     {{#if isMenu "chat"}}{{> chatTemplate}}{{/if}}
     {{#if isMenu "broadcastMessage"}}{{> broadcastMessageTemplate}}{{/if}}
     {{#if isMenu "intonation"}}{{> intonationTemplate}}{{/if}}
-    
+    {{#if isMenu "bgm"}}{{> bgmTemplate}}{{/if}}
+
     <!-- チャット詳細 -->
     {{#if isMenu "chatDetail"}}{{> chatDetailTemplate}}{{/if}}
   </div>
